--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "devDependencies": {
     "bower": "^1.3.3",
+    "gulp-replace-task": "^0.11.0",
     "gulp-util": "^2.2.14",
-    "shelljs": "^0.3.0"
+    "shelljs": "^0.3.0",
+    "yargs": "^3.31.0"
   },
   "cordovaPlugins": [
     "cordova-plugin-device",
@@ -22,5 +24,7 @@
     "cordova-plugin-statusbar",
     "ionic-plugin-keyboard"
   ],
-  "cordovaPlatforms": []
+  "cordovaPlatforms": [
+    "android"
+  ]
 }
